<resources>
    <string name="app_name">Foodster_App_MobileAppDevProject</string>
    <string name="textForImageView">an Image</string>
    <string name="hintTextForUserEmail">User Email</string>
    <string name="hintTextForPassword">Password</string>
    <string name="textForRegisterActivityButton">Register</string>
    <string name="textForLoginBotton">Login</string>
    <string name="textforEnterDetails">Please enter your details</string>
    <string name="registerSpinnerPrompt">Type of Customer to Register</string>
    <string name="txtForButtonOfRegistrationType">Confirm Type of Registration</string>
    <string name="txtForTextViewRegistrationTypeTitle">Please select the type of Registration you need</string>
    <string name="txtForCustomerRegistrationTitle">Customer Registration: Please provide your details</string>
    <string name="hintForFirstName">First Name</string>
    <string name="hintTextForLastName">Last Name</string>
    <string name="hintForFirstNameOwner">Owner\'s First Name</string>
    <string name="hintTextForLastNameOwner">Owner\'s Last Name</string>
    <string name="hintTextForAddress">Address</string>
    <string name="hintTextForPhoneNumber">Phone Number</string>
    <string name="txtForRestaurantRegistrationTitle">Restaurant Registration: Please provide your details</string>
    <string name="hintTextForRestaurantName">New Restaurant Name</string>
    <string name="restaurantRegisterSpinnerCityPrompt">Select the city of operation</string>
    <string name="textForCitySelectiontitle">Please Choose the city of operations from the list</string>
    <string name="txtForRestaurantOpeningActivityTitle">Welcome,</string>
    <string name="txtMenu">Menu</string>
    <string name="btnAdd">Add</string>
    <string name="btnRemove">Remove</string>
    <string name="hintDisc">Discription</string>
    <string name="hintName">Name</string>
    <string name="hintPrice">Price</string>
    <string name="hintAmount">Amount</string>
    <string name="btnPost">Post</string>
    <string name="hintTime">Time to pickup</string>
    <string name="txtTitlePostFood">Post new or Delete Dish</string>
    <string name="txtForCustomerOpeningActivityTitle">Welcome Customer User</string>
    <string name="txtProfile">Profile Details</string>
    <string name="txtName">Name</string>
    <string name="txtLast">Last Name</string>
    <string name="txtMail">Email</string>
    <string name="txtNumber">Number</string>
    <string name="txtAdress">Adress</string>
    <string name="email">email@email.com</string>
    <string name="hint">7765433434</string>
    <string name="hint2">Customer Adress</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnLogout">Logout</string>
    <string name="txtEditProfile">Edit Profile</string>
    <string name="btnSaveChanges">Save Changes</string>
    <string name="txtRestaurant">Restaurant</string>
    <string name="hintReasturantName">Restaurant</string>
    <string-array name="registerSpinnerArray">
        <item>Customer</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="restaurantSpinnerCitySelectionArray">
        <item>East Vancouver</item>
        <item>North Vancouver</item>
        <item>South Vancouver</item>
        <item>West Vancouver</item>
        <item>Burnaby</item>
        <item>New Westminster</item>
        <item>Richmond</item>
        <item>Surrey</item>
    </string-array>

    <string name="description">image of a restaurant</string>
    <string name="hintSearch">Search</string>
    <string name="txtAddress">address</string>
    <string name="dishOne"> Dish 1</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>
    <string name="dishNumber">1</string>
    <string name="dishTwo"> Dish 2</string>
    <string name="dishThree"> Dish 3</string>
    <string name="txtPickup">Pickup</string>
    <string name="txtDelivery">Delivery</string>
    <string name="orderBtn">Order</string>
    <string name="txtTitleRemoveFood">Please select the dish you would like to remove</string>
    <string name="btnSaveRemove">Save Changes</string>
    <string name="txtRemove">Remove</string>
    <string name="btnAddRem">Add/Remove Food Items</string>
    <string name="btnViewEdit">View/Edit Food Orders</string>
    <string name="btnSendRemind">Send a Reminder</string>
    <string name="btnGenRepo">Generate Reports</string>
    <string name="btnLogOut">Log out</string>
    <string name="txtDelete">Delete</string>
    <string name="txtTitleViewEditDishes">Posted Dishes</string>
    <string name="txtSave">Save</string>
    <string name="titleEditDish">Edit the Dish</string>
    <string name="titleReminder">Orders in progress</string>
    <string name="txtDiscImage">bell</string>
    <string name="btnSendReport">Send Report</string>
    <string name="btnProfile">Show Profile</string>
</resources>