<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerProfile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtProfile"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="29dp" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="68dp" />

    <TextView
        android:id="@+id/txtLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txtLast"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/txtmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMail"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="189dp" />

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNumber"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/txtAdress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAdress"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="379dp" />

    <Button
        android:id="@+id/btnCEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEditProfile"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="476dp" />

    <Button
        android:id="@+id/btnCLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogout"
        tools:layout_editor_absoluteX="228dp"
        tools:layout_editor_absoluteY="480dp" />

</androidx.constraintlayout.widget.ConstraintLayout>