<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantEditProfile">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/txtEditProfile"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txtName"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/RPersonNameEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:text="@string/txtLast"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etxtRLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etxtRLastName" />

    <TextView
        android:id="@+id/txtmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="7dp"
        android:text="@string/txtMail"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etxtREmailEditProfile"
        app:layout_constraintEnd_toStartOf="@+id/etxtREmailEditProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/txtNumber"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/etxtPhoneEditProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtAdress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="265dp"
        android:text="@string/txtAdress"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:text="@string/btnSaveChanges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/txtRestaurant"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/etxtRestaurantEditProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/RPersonNameEditProfile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/hintForFirstName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtLast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtName"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/etxtRLastName"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="113dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="112dp"
        android:ems="10"
        android:hint="@string/hintTextForLastName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/txtNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLast"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etxtREmailEditProfile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="141dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/etxtRAdressEditProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtmail"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/etxtPhoneEditProfile"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/etxtREmailEditProfile"
        app:layout_constraintTop_toBottomOf="@+id/etxtREmailEditProfile" />

    <EditText
        android:id="@+id/etxtRAdressEditProfile"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:hint="@string/hintTextForAddress"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/txtAdress"
        app:layout_constraintEnd_toEndOf="@+id/etxtRestaurantEditProfile"
        app:layout_constraintTop_toBottomOf="@+id/txtAdress" />

    <EditText
        android:id="@+id/etxtRestaurantEditProfile"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hintReasturantName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/etxtRAdressEditProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>